# tauri-pilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SKILL.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
crates/tauri-pilot-cli/: Cargo.toml  README.md
crates/tauri-pilot-cli/src/: cli.rs  client.rs  error.rs  lib.rs  main.rs  mcp.rs  output.rs  protocol.rs  scenario.rs  style.rs
crates/tauri-pilot-cli/src/client/: mod.rs  unix.rs  windows.rs
crates/tauri-pilot-cli/src/mcp/: _legacy.rs  args.rs  banner.rs  mod.rs  responses.rs  schemas.rs
crates/tauri-pilot-cli/src/mcp/handlers/: assert.rs  core.rs  eval.rs  inspect.rs  interact.rs  mod.rs  observe.rs  record.rs  storage.rs
crates/tauri-pilot-cli/src/mcp/server/: asserts.rs  calls.rs  file_ops.rs  methods.rs  mod.rs  tests.rs
crates/tauri-pilot-cli/src/mcp/tools/: assert.rs  core.rs  eval.rs  inspect.rs  interact.rs  mod.rs  observe.rs  record.rs  schema_tests.rs  schemas.rs  storage.rs  tests.rs
crates/tauri-pilot-cli/src/mcp/tools/schemas/: assert.rs  core.rs  eval.rs  interact.rs  mod.rs  observe.rs  record.rs  storage.rs
crates/tauri-pilot-cli/src/output/: diff.rs  diff_tests.rs  forms.rs  forms_tests.rs  json.rs  logs.rs  mod.rs  network.rs  record.rs  snapshot.rs  storage.rs  text.rs  watch.rs  watch_tests.rs  windows.rs
crates/tauri-pilot-cli/tests/: output_smoke.rs  snapshot_save_json.rs  version.rs
crates/tauri-plugin-pilot/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-pilot/js/: bridge.drag.test.mjs  bridge.js  bridge.screenshot.test.mjs  bridge.select.test.mjs  bridge.snapshot.test.mjs
crates/tauri-plugin-pilot/permissions/: default.toml
crates/tauri-plugin-pilot/permissions/autogenerated/: reference.md
crates/tauri-plugin-pilot/permissions/autogenerated/commands/: __callback.toml  callback.toml
crates/tauri-plugin-pilot/permissions/schemas/: schema.json
crates/tauri-plugin-pilot/src/: diff.rs  error.rs  eval.rs  handler.rs  key.rs  lib.rs  protocol.rs  recorder.rs  server.rs
crates/tauri-plugin-pilot/src/screenshot/: cgwindow.rs  error.rs  ipc.rs  mod.rs  native.rs  probe.rs  screencapture.rs  window_id.rs
crates/tauri-plugin-pilot/src/server/: mod.rs  unix.rs  windows.rs
docs/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
docs/examples/: login-flow.toml
docs/src/content/docs/: contributing.md  getting-started.md  index.mdx
docs/src/content/docs/guides/: ai-agents.md  architecture.md  plugin-setup.md
docs/src/content/docs/reference/: cli.md
docs/src/styles/: custom.css
docs/superpowers/plans/: 2026-04-24-issue-70-pr1-cli-low-risk.md
docs/superpowers/specs/: 2026-04-24-issue-70-phase-c-design.md
scripts/: build-html-to-image.sh  integrate-prism.sh  release.sh
