[workspace]
resolver = "2"
members = ["crates/tauri-plugin-pilot", "crates/tauri-pilot-cli"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.94.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1" }
tracing = "0.1"

[workspace.lints.clippy]
unwrap_used = "deny"
pedantic = { level = "warn", priority = -1 }
