[package]
name = "tauri-pilot-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tauri-pilot"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "io-util"] }
tracing.workspace = true
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22.1"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
indicatif = "0.17"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
assert_cmd = "2"
