[package]
name = "tauri-pilot-cli"
version = "0.4.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for interactive testing and automation of Tauri v2 applications"
keywords = ["tauri", "cli", "testing", "automation", "accessibility"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"

[[bin]]
name = "tauri-pilot"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "io-util", "time"] }
tracing.workspace = true
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22.1"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
indicatif = "0.17"
rmcp = { version = "1.4.0", default-features = false, features = ["server", "transport-io"] }
toml = "0.8"
quick-xml = "0.36"

[target.'cfg(unix)'.dependencies]
libc = "0.2.184"

[target.'cfg(windows)'.dependencies]
windows = "0.52"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
assert_cmd = "2"
serial_test = "3.4.0"
tempfile = "3"
