[package]
name = "tauri-plugin-pilot"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tauri v2 plugin for runtime UI testing and automation via Unix socket JSON-RPC"
keywords = ["tauri", "plugin", "testing", "automation", "accessibility"]
categories = ["development-tools::testing", "gui"]
readme = "README.md"
links = "tauri-plugin-pilot"

[lints]
workspace = true

[features]
default = ["press"]
# Enables the OS-level `press` command. Pulls in `enigo` and its platform
# backends. Opt out with `--no-default-features` to drop the dependency from
# release builds where the whole plugin is already no-op'd by
# `cfg(debug_assertions)`.
press = ["dep:enigo"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "rt", "sync", "time", "io-util"] }
tracing.workspace = true
thiserror = "2"
tauri = { version = "2", features = ["unstable"] }
libc = "0.2.184"
# `wayland` enables the libei-based Wayland backend so `press` works on
# modern Linux sessions, not just X11.
enigo = { version = "0.6.1", features = ["wayland"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }
